lodash added, with example, plus gitignore

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/grahamd99/node-notes/issues"
   },
-  "homepage": "https://github.com/grahamd99/node-notes#readme"
+  "homepage": "https://github.com/grahamd99/node-notes#readme",
+  "dependencies": {
+    "lodash": "^4.17.11"
+  }
 }
